Updates to ui-file

--- a/app.ui
+++ b/app.ui
@@ -19,7 +19,7 @@
      <rect>
       <x>31</x>
       <y>51</y>
-      <width>24</width>
+      <width>50</width>
       <height>16</height>
      </rect>
     </property>
@@ -60,6 +60,9 @@
       <height>23</height>
      </rect>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QDoubleSpinBox" name="heightDoubleSpinBox">
     <property name="geometry">
@@ -69,6 +72,9 @@
       <width>62</width>
       <height>23</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <double>300.000000000000000</double>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="weightDoubleSpinBox">
@@ -80,13 +86,16 @@
       <height>23</height>
      </rect>
     </property>
+    <property name="maximum">
+     <double>300.000000000000000</double>
+    </property>
    </widget>
    <widget class="QLabel" name="dateLabel">
     <property name="geometry">
      <rect>
       <x>190</x>
       <y>110</y>
-      <width>68</width>
+      <width>90</width>
       <height>16</height>
      </rect>
     </property>
@@ -151,7 +160,7 @@
      <rect>
       <x>30</x>
       <y>180</y>
-      <width>120</width>
+      <width>130</width>
       <height>22</height>
      </rect>
     </property>
@@ -255,7 +264,7 @@
      <rect>
       <x>170</x>
       <y>50</y>
-      <width>90</width>
+      <width>100</width>
       <height>16</height>
      </rect>
     </property>
@@ -271,6 +280,12 @@
       <width>87</width>
       <height>23</height>
      </rect>
+    </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::DefaultContextMenu</enum>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -304,7 +319,7 @@
      <rect>
       <x>30</x>
       <y>360</y>
-      <width>110</width>
+      <width>130</width>
       <height>30</height>
      </rect>
     </property>
@@ -386,12 +401,25 @@
      <x>0</x>
      <y>0</y>
      <width>383</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <tabstops>
+  <tabstop>nameLineEdit</tabstop>
+  <tabstop>birthDateEdit</tabstop>
+  <tabstop>heightDoubleSpinBox</tabstop>
+  <tabstop>weightDoubleSpinBox</tabstop>
+  <tabstop>dateEdit</tabstop>
+  <tabstop>sexComboBox</tabstop>
+  <tabstop>neckSpinBox</tabstop>
+  <tabstop>waistSpinBox</tabstop>
+  <tabstop>hipsSpinBox</tabstop>
+  <tabstop>calculatePushButton</tabstop>
+  <tabstop>savePushButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
